# nix-config

./: .editorconfig  .envrc  .gitignore  .luarc.json  .mergify.yml  .sops.yaml  AGENTS.md  LICENSE  LICENSE.md  README.md  _run_tests.sh  default.nix  flake.nix  result-lix-woodpecker  result.json  run-test.sh  shell.nix  typos.toml
.github/workflows/: ci.yaml  ci.yml  (+8 more)
.woodpecker/: check-upstream-todos.yaml  check.yaml  checks.yaml  ci-homes.yaml  ci-hosts.yaml  ci-packages.yaml  ci.yaml  flake-checker.yaml  lix.yaml  packages.yaml  security.yaml  test-vm.yaml  update-packages.yaml  update.yaml
.zed/: tasks.json
containers/: default.nix  minio.nix
docs/: Creating-Hosts.md  Creating-Users.md  External Packages.md  Gnome Dconf.md  Installation.md  book.toml  default.nix  gen-options-json.py  gen-options-md.py  search.nix  serve.nix  site.nix
flake/: default.nix  modules.nix  packages.nix
hosts/: secrets.yaml
lib/: attrsets.nix  default.nix  files.nix  hardware.nix  hypr.nix  keys.nix  mk.nix  mkV2.nix  package.nix  persistence.nix  strings.nix
openspec/: config.yaml
overlays/: default.nix  oscavmgr_header.patch  singleton.nix
pkgs/: default.nix  hyprland-smart-borders.nix  vinegar.nix
templates/rust/: .editorconfig  .envrc  .gitignore  Cargo.toml  cliff.toml  default.nix  flake.nix  shell.nix
templates/rust/.github/workflows/: ci.yaml  release.yaml  typos.yaml
templates/rust/crates/macros/: Cargo.toml
tests/: builder.nix  default.nix  lib.nix  mkNode.nix
utils/: build-vscode-extensions.sh  get-hm-imports.nix  get-imports.nu  get-os-imports.nix
(+1154 files in other folders)
